Updates in evaluation scripts - Extracting material

--- a/Kite_Investigation/surrogate/nn_kite_modell.ipynb
+++ b/Kite_Investigation/surrogate/nn_kite_modell.ipynb
@@ -1567,13 +1567,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0322 - val_loss: 0.0282\n",
       "Epoch 81/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0297 - val_loss: 0.0277\n",
-      "Epoch 82/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 82/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0291 - val_loss: 0.0271\n",
       "Epoch 83/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0289 - val_loss: 0.0267\n",
@@ -1899,13 +1893,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0066 - val_loss: 0.0059\n",
       "Epoch 241/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0061 - val_loss: 0.0060\n",
-      "Epoch 242/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 242/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0058 - val_loss: 0.0059\n",
       "Epoch 243/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0063 - val_loss: 0.0058\n",
@@ -2231,13 +2219,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0030 - val_loss: 0.0030\n",
       "Epoch 401/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0031 - val_loss: 0.0029\n",
-      "Epoch 402/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 402/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0030 - val_loss: 0.0029\n",
       "Epoch 403/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0030 - val_loss: 0.0030\n",
@@ -2563,13 +2545,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0021 - val_loss: 0.0021\n",
       "Epoch 561/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0021 - val_loss: 0.0021\n",
-      "Epoch 562/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 562/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0021 - val_loss: 0.0021\n",
       "Epoch 563/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0021 - val_loss: 0.0021\n",
@@ -2895,13 +2871,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0017 - val_loss: 0.0017\n",
       "Epoch 721/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0017 - val_loss: 0.0018\n",
-      "Epoch 722/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 722/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0017 - val_loss: 0.0017\n",
       "Epoch 723/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0016 - val_loss: 0.0017\n",
@@ -3227,13 +3197,7 @@
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0014 - val_loss: 0.0016\n",
       "Epoch 881/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0015 - val_loss: 0.0015\n",
-      "Epoch 882/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 882/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0014 - val_loss: 0.0015\n",
       "Epoch 883/1000\n",
       "17/17 [==============================] - 0s 2ms/step - loss: 0.0014 - val_loss: 0.0015\n",
