--- a/Kite_Investigation/surrogate/nn_vs_gp_sys_id.ipynb
+++ b/Kite_Investigation/surrogate/nn_vs_gp_sys_id.ipynb
@@ -147,8 +147,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-11-21 21:32:22.326388: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2021-11-21 21:32:22.326538: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2021-11-22 11:22:17.896726: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2021-11-22 11:22:17.896908: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -1247,7 +1247,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_name = 'S01_GP_M01_200'\n",
+    "export_name = 'S01_GP_M01_200' # 200 samples\n",
+    "# or:\n",
+    "#export_name = 'S01_GP_M02_100' # 100 samples\n",
     "export_path = './gp_models/{}/'\n",
     "\n",
     "gp_model = do_mpc.tools.load_pickle(export_path.format(export_name) + export_name + '_gp.pkl')\n",
@@ -2283,37 +2285,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3a72bebf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a,b = gpr.predict(np.zeros((1,6)),return_cov=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c818dfae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.00899437]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "987c2ca3",
    "metadata": {},
    "outputs": [],
@@ -2345,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "586541e6",
    "metadata": {},
    "outputs": [],
@@ -2371,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "70a1782a",
    "metadata": {},
    "outputs": [],
@@ -2381,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "70eca2cd",
    "metadata": {},
    "outputs": [],
@@ -2391,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "799e77fb",
    "metadata": {},
    "outputs": [
@@ -2411,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "9df94fd3",
    "metadata": {},
    "outputs": [
@@ -3391,7 +3362,7 @@
        "(0.0, 1.4)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3425,7 +3396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "d5f88521",
    "metadata": {
     "scrolled": false
@@ -4400,6 +4371,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 1.4)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4444,12 +4425,12 @@
     "ax[0,0].set_xlim(-1.5,1.5)\n",
     "ax[0,0].set_ylim(0,1.4)\n",
     "\n",
-    "fig.savefig('./figures/Kite_GP_NN_open_loop_prediction.pdf',format='pdf', pad_inches=0)"
+    "#fig.savefig('./figures/Kite_GP_NN_open_loop_prediction.pdf',format='pdf', pad_inches=0)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45ec2b01",
+   "id": "ca141867",
    "metadata": {},
    "source": [
     "# Execution speed\n",
@@ -4459,8 +4440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "fccc78b5",
+   "execution_count": 21,
+   "id": "cdf1e1af",
    "metadata": {},
    "outputs": [
     {
@@ -4486,8 +4467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7e43d2a9",
+   "execution_count": 22,
+   "id": "0c37b2c4",
    "metadata": {},
    "outputs": [
     {
@@ -4498,7 +4479,7 @@
        "                         normalize_y=False, optimizer=None, random_state=None)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4510,7 +4491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e37d3d",
+   "id": "23cad488",
    "metadata": {},
    "source": [
     "Compare GP results of own implementation with Sklearn:"
@@ -4518,8 +4499,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "ffc43b25",
+   "execution_count": 23,
+   "id": "c47ae228",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4528,8 +4509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "63f1beac",
+   "execution_count": 24,
+   "id": "afe3de66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4538,8 +4519,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "c2366b49",
+   "execution_count": 25,
+   "id": "f60d13ef",
    "metadata": {},
    "outputs": [
     {
@@ -4556,7 +4537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5728780f",
+   "id": "731c4917",
    "metadata": {},
    "source": [
     "Timing of GP own implementation vs. sklearn:"
@@ -4564,15 +4545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "3c08feb6",
+   "execution_count": 26,
+   "id": "d2c15b22",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "302 µs ± 18.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "286 µs ± 9.29 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -4583,15 +4564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "decc5acf",
+   "execution_count": 27,
+   "id": "9d5a1051",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "155 µs ± 1.05 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "161 µs ± 4.01 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -4602,7 +4583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff7d6511",
+   "id": "4f676b9a",
    "metadata": {},
    "source": [
     "Timing of jacobian / gradient computation:"
@@ -4610,15 +4591,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "bfb3f0b2",
+   "execution_count": 28,
+   "id": "3c797ee2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "973 µs ± 72 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "959 µs ± 12.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -4629,7 +4610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e041663",
+   "id": "11642e30",
    "metadata": {},
    "source": [
     "## Neural Networks"
@@ -4637,8 +4618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "8e8a56b0",
+   "execution_count": 29,
+   "id": "ce54b3fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4653,15 +4634,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "416d43a7",
+   "execution_count": 30,
+   "id": "f824310a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.5 µs ± 115 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "22.5 µs ± 404 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -4672,15 +4653,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "986d7f6c",
+   "execution_count": 31,
+   "id": "af8e7fef",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.9 µs ± 1.35 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "35.3 µs ± 260 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
