Some Annotations to BLL_Fundamentals

--- a/BLL_Fundamentals/BLL_Fundamentals.ipynb
+++ b/BLL_Fundamentals/BLL_Fundamentals.ipynb
@@ -5,7 +5,10 @@
    "id": "f3e98d2a",
    "metadata": {},
    "source": [
-    "# Introduction to Bayesian Last Layer"
+    "# Introduction to Bayesian Last Layer\n",
+    "\n",
+    "The purpose of this Jupyter Notebook is to provide some toy examples for BLL (not control related).\n",
+    "We also use one of these toy examples as Figure 1 in our paper."
    ]
   },
   {
@@ -13,12 +16,12 @@
    "id": "nasty-intersection",
    "metadata": {},
    "source": [
-    "Required Tensorflow 2.x to run (where Keras is part of Tensorflow and not a stand-alone package)"
+    "Requires Tensorflow 2.0+ to run (where Keras is part of Tensorflow and not a stand-alone package)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "caroline-nevada",
    "metadata": {},
    "outputs": [],
@@ -41,8 +44,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "648e434c",
+   "metadata": {},
+   "source": [
+    "Modifying Matplotlib for prettier graphics."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "viral-sheet",
    "metadata": {},
    "outputs": [],
@@ -71,7 +82,16 @@
    "id": "illegal-isaac",
    "metadata": {},
    "source": [
-    "# Utility functions"
+    "# Utility functions\n",
+    "\n",
+    "We define two utility functions. \n",
+    "\n",
+    "``get_keras_model`` allows us to quickly obtain a (dense, feed-forward) Neural Network from keras/tensorflow with just a single line of code. \n",
+    "\n",
+    "Users must pass the parameters ``architecture`` and ``activation``,\n",
+    "where, e.g. ``architecture = [1,6,6,2]`` defines a NN with 1 input, two hidden layers with 6 neurons each and 2 outputs. The ``activation='relu'`` parameter sets a ReLu activation function for **ALL but the last layer**.\n",
+    "\n",
+    "The method returns both the ``tf.keras.Model`` and the list of ``outputs`` of each layer. The latter is used to compute the activation pattern in the last layer for the BLL appraoch."
    ]
   },
   {
@@ -110,6 +130,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b550487b",
+   "metadata": {},
+   "source": [
+    "For our 1-D examples, we define a function that quickly returns a plot."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "periodic-completion",
@@ -139,6 +167,14 @@
     "\n",
     "    if legend == True:\n",
     "        ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b38ef962",
+   "metadata": {},
+   "source": [
+    "Function to provide some 1-D test data."
    ]
   },
   {
@@ -2314,6 +2350,8 @@
     }
    ],
    "source": [
+    "%%capture\n",
+    "\n",
     "history = model.fit(\n",
     "    train[0], \n",
     "    train[1],\n",
