Append sys.path: do-mpc instead of do-mpc_fork

--- a/Kite_Investigation/surrogate/mpc/validation_sampling/validation_evalution.ipynb
+++ b/Kite_Investigation/surrogate/mpc/validation_sampling/validation_evalution.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import sys\n",
-    "sys.path.append('../../../../../do-mpc_fork/')\n",
+    "sys.path.append('../../../../../do-mpc/')\n",
     "import do_mpc\n",
     "import pandas as pd\n",
     "import scipy.io as sio\n",
