--- a/Kite_Investigation/surrogate/gp_kite_modell.ipynb
+++ b/Kite_Investigation/surrogate/gp_kite_modell.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
-    "sys.path.append('../../../do-mpc_fork/')\n",
+    "sys.path.append('../../../do-mpc/')\n",
     "import do_mpc\n",
     "import pandas as pd\n",
     "import scipy.io as sio\n",
